src/test/ui/parser/removed-syntax-extern-const.rs
extern {
    const i: isize;
    //~^ ERROR extern items cannot be `const`
}

fn main() {}
